# rust-ai-paper-reader

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: release.yml
crates/app-core/: Cargo.toml
crates/app-core/src/: service.rs
crates/app-core/tests/: service_flow.rs
docs/superpowers/plans/: 2026-04-22-pdf-reader.md
docs/superpowers/specs/: 2026-04-22-pdf-reader-design.md
src/: App.test.tsx  App.tsx  bootstrap.test.tsx  bootstrap.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tessdata/: README.txt
src-tauri/src/: main.rs
src/components/readers/: NormalizedReader.tsx  PdfContinuousReader.test.tsx  PdfContinuousReader.tsx  PdfReader.test.tsx  PdfReader.tsx  pdfContinuousActivePage.test.ts  pdfContinuousActivePage.ts  pdfFit.test.ts  pdfFit.ts  pdfOcrConfig.ts  pdfOcrTextLayer.test.ts  pdfOcrTextLayer.ts  pdfRustTextLayer.ts  pdfSelection.test.ts  pdfSelection.ts  pdfTextLayerSelectionSupport.test.ts  pdfTextLayerSelectionSupport.ts
src/lib/: api.ts  clientEventLog.test.ts  clientEventLog.ts  contracts.ts  dom.ts  mockApi.ts  runtimePolyfills.test.ts  runtimePolyfills.ts
src/test/: fakeApi.ts  pdfjsLegacyMock.ts  setup.ts
