[package]
name = "paper-reader-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
app-core = { path = "../crates/app-core" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
