[package]
name = "paper-reader-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
app-core = { path = "../crates/app-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

# Rust PDF engine (render + text spans) to avoid WKWebView / pdf.js compatibility issues.
pdf_oxide = { version = "0.3.38", features = ["rendering"] }

# Native OCR fallback for scanned PDFs (bundled Tesseract + tessdata resources).
tesseract-ocr-static = "0.1.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
