[package]
name = "app-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"
