[package]
name = "app-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
html-escape = "0.2"
lopdf = "0.35"
pdf-extract = "0.7"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zip = "2.2"

[dev-dependencies]
flate2 = "1.1"
tempfile = "3.14"
